syntax = "proto3";

package types;

option go_package = "github.com/tinyci/ci-agents/grpc/types";

import "github.com/golang/protobuf/ptypes/timestamp/timestamp.proto";

import "github.com/tinyci/ci-agents/grpc/types/run.proto";

// QueueItems are the subject sent to runners when runners are able to execute
// a job. Runners poll for these endless through the queuesvc.
message QueueItem {
  int64                     id        = 1; // ID of queue item
  bool                      running   = 2; // Is the job running?
  string                    runningOn = 3; // What host is it running on
  google.protobuf.Timestamp startedAt = 4; // When did it start?
  string                    queueName = 5; // The name of the queue
  types.Run                 run       = 6; // The run itself.
}

// QueueRequest is issued by runners to the queuesvc.
message QueueRequest {
  string queueName = 1;
  string runningOn = 2;
}

// Status is reported to the queuesvc on completion of a run.
message Status {
  int64   id                = 1;
  bool    status            = 2;
  string  additionalMessage = 3;
}
